--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,10 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
+        "moment": "^2.30.1",
+        "moment-timezone": "^0.5.46",
         "react": "^18.3.1",
+        "react-big-calendar": "^1.16.3",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.0.1"
     }
